--- a/kubernetes/apps/self-hosted/nextcloud/ks.yaml
+++ b/kubernetes/apps/self-hosted/nextcloud/ks.yaml
@@ -9,6 +9,8 @@ spec:
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
+  components:
+    - ../../../../components/pvc
   dependsOn:
     - name: cloudnative-pg-cluster
       namespace: database
@@ -23,6 +25,9 @@ spec:
   postBuild:
     substitute:
       APP: *app
+      PVC_ACCESSMODES: ReadWriteOnce
+      PVC_STORAGECLASS: ${CLUSTER_STORAGE_BLOCK}
+      PVC_CAPACITY: 5Gi
   prune: true
   sourceRef:
     kind: GitRepository
