feat(nextcloud): enable collabora

--- a/kubernetes/apps/self-hosted/nextcloud/app/externalsecret.yaml
+++ b/kubernetes/apps/self-hosted/nextcloud/app/externalsecret.yaml
@@ -12,6 +12,9 @@ spec:
     name: *app
     template:
       data:
+        # Collabora
+        COLLABORA_USERNAME: "{{ .COLLABORA_USERNAME }}"
+        COLLABORA_PASSWORD: "{{ .COLLABORA_PASSWORD }}"
         # Nextcloud
         ADMIN_USER: "{{ .NEXTCLOUD_ADMIN_USER }}"
         ADMIN_PASS: "{{ .NEXTCLOUD_ADMIN_PASS }}"
@@ -38,6 +41,8 @@ spec:
   dataFrom:
     - extract:
         key: cloudnative-pg
+    - extract:
+        key: collabora
     - extract:
         key: dragonfly
     - extract:
