--- a/kubernetes/apps/self-hosted/nextcloud/app/helmrelease.yaml
+++ b/kubernetes/apps/self-hosted/nextcloud/app/helmrelease.yaml
@@ -235,11 +235,15 @@ spec:
           }
     collabora:
       enabled: true
+      image:
+        repository: docker.io/collabora/code
+        tag: 24.04.12.2.1@sha256:46f799f6f5d4b985dbfdaacabbdcb6ecb90c4e3659d28a4b66757f6946c07829
       existingSecret:
         enabled: true
         secretName: *app
         usernameKey: COLLABORA_USERNAME
         passwordKey: COLLABORA_PASSWORD
+      extra_params: --o:ssl.enable=false --o:ssl.ssl_verification=false --o:ssl.termination=true --o:welcome.enable=false
     redis:
       enabled: false
     nginx:
