fix(collabora): disable deployment

--- a/kubernetes/apps/self-hosted/kustomization.yaml
+++ b/kubernetes/apps/self-hosted/kustomization.yaml
@@ -10,7 +10,7 @@ components:
   - ../../components/substitutions
 resources:
   # Flux-Kustomizations
-  - ./collabora/ks.yaml
+  # - ./collabora/ks.yaml
   - ./dokuwiki/ks.yaml
   - ./hoarder/ks.yaml
   - ./immich/ks.yaml
