fix(nextcloud): modify collabora

--- a/kubernetes/apps/self-hosted/nextcloud/app/helmrelease.yaml
+++ b/kubernetes/apps/self-hosted/nextcloud/app/helmrelease.yaml
@@ -254,6 +254,7 @@ spec:
           - host: *host
             paths:
               - path: /
+                pathType: ImplementationSpecific
     redis:
       enabled: false
     nginx:
