fix(nextcloud): modify collabora

--- a/kubernetes/apps/self-hosted/nextcloud/app/helmrelease.yaml
+++ b/kubernetes/apps/self-hosted/nextcloud/app/helmrelease.yaml
@@ -243,7 +243,9 @@ spec:
         secretName: *app
         usernameKey: COLLABORA_USERNAME
         passwordKey: COLLABORA_PASSWORD
-      extra_params: --o:ssl.enable=false --o:ssl.ssl_verification=false --o:ssl.termination=true --o:welcome.enable=false
+      aliasgroups:
+        - host: "https://nextcloud.domain:443"
+      extra_params: --o:ssl.enable=false --o:ssl.ssl_verification=false --o:ssl.termination=true --o:welcome.enable=false --o:net.frame_ancestors=documents.${SECRET_DOMAIN}
       server_name: &host documents.${SECRET_DOMAIN}
       ingress:
         enabled: true
