--- a/kubernetes/apps/self-hosted/nextcloud/app/helmrelease.yaml
+++ b/kubernetes/apps/self-hosted/nextcloud/app/helmrelease.yaml
@@ -245,8 +245,13 @@ spec:
         passwordKey: COLLABORA_PASSWORD
       aliasgroups:
         - host: "https://nextcloud.${SECRET_DOMAIN}:443"
-      extra_params: --o:ssl.enable=false --o:ssl.termination=true
+      extra_params: --o:ssl.enable=false --o:ssl.ssl_verification=false --o:ssl.termination=true --o:welcome.enable=false --o:net.frame_ancestors=documents.${SECRET_DOMAIN}
       server_name: &host documents.${SECRET_DOMAIN}
+      securityContext:
+        runAsNonRoot: true
+        runAsUser: 100
+        runAsGroup: 101
+        capabilities: { add: ["MKNOD"] }
       ingress:
         enabled: true
         className: internal
