--- a/kubernetes/apps/self-hosted/nextcloud/app/helmrelease.yaml
+++ b/kubernetes/apps/self-hosted/nextcloud/app/helmrelease.yaml
@@ -262,6 +262,9 @@ spec:
             paths:
               - path: /
                 pathType: ImplementationSpecific
+        tls:
+          - hosts:
+              - *host
     redis:
       enabled: false
     nginx:
