--- a/kubernetes/apps/self-hosted/nextcloud/app/helmrelease.yaml
+++ b/kubernetes/apps/self-hosted/nextcloud/app/helmrelease.yaml
@@ -245,7 +245,7 @@ spec:
         passwordKey: COLLABORA_PASSWORD
       aliasgroups:
         - host: "https://nextcloud.${SECRET_DOMAIN}:443"
-      extra_params: --o:ssl.enable=false --o:ssl.termination=true --o:mount_jail_tree=false --o:logging.level=warning --o:home_mode.enable=true --o:security.seccomp=true --o:remote_font_config.url=https://nextcloud.${SECRET_DOMAIN}/apps/richdocuments/settings/fonts.json --o:net.post_allow.host[0]=.+
+      extra_params: --o:ssl.termination=true --o:ssl.enable=false --o:welcome.enable=false --o:net.frame_ancestors=documents.${SECRET_DOMAIN}
       server_name: &host documents.${SECRET_DOMAIN}
       securityContext:
         runAsNonRoot: true
