--- a/kubernetes/apps/self-hosted/collabora/app/helmrelease.yaml
+++ b/kubernetes/apps/self-hosted/collabora/app/helmrelease.yaml
@@ -45,7 +45,7 @@ spec:
                     name: *app
                     key: COLLABORA_PASSWORD
               - name: extra_params
-                value: "--o:ssl.termination=true --o:ssl.enable=false --o:welcome.enable=false --o:net.frame_ancestors=collabora.${SECRET_DOMAIN}"
+                value: "--o:ssl.enable=false --o:ssl.termination=true --o:mount_jail_tree=false --o:logging.level=warning --o:home_mode.enable=true --o:security.seccomp=true --o:remote_font_config.url=https://nextcloud.${SECRET_DOMAIN}/apps/richdocuments/settings/fonts.json --o:net.post_allow.host[0]=.+"
               - name: dictionaries
                 value: "de_DE en_GB en_US es_ES fr_FR"
               - name: server_name
@@ -56,7 +56,6 @@ spec:
               liveness: *probes
               readiness: *probes
             securityContext:
-              allowPrivilegeEscalation: false
               capabilities:
                 add: ["SYS_ADMIN", "MKNOD"]
                 drop: ["NET_RAW"]
