--- a/kubernetes/apps/self-hosted/nextcloud/app/job.yaml
+++ b/kubernetes/apps/self-hosted/nextcloud/app/job.yaml
@@ -14,6 +14,7 @@ spec:
         volumeMounts:
         - name: &volMount nextcloud-main
           mountPath: /var/www/html
+          subPath: config
       restartPolicy: OnFailure
       securityContext:
         runAsUser: &uid 82
@@ -39,6 +40,7 @@ spec:
         volumeMounts:
         - name: &volMount nextcloud-main
           mountPath: /var/www/html
+          subPath: config
       restartPolicy: OnFailure
       securityContext:
         runAsUser: &uid 82
@@ -78,6 +80,7 @@ spec:
         volumeMounts:
         - name: &volMount nextcloud-main
           mountPath: /var/www/html
+          subPath: config
       restartPolicy: OnFailure
       securityContext:
         runAsUser: &uid 82
