feat(nextcloud): modify subPath in volumeMounts

--- a/kubernetes/apps/self-hosted/nextcloud/app/job.yaml
+++ b/kubernetes/apps/self-hosted/nextcloud/app/job.yaml
@@ -12,9 +12,9 @@ spec:
         command: ["/bin/sh", "-c"]
         args: ["until php /var/www/html/occ status --output json | grep -q '\"installed\":true'; do sleep 10; done && php /var/www/html/occ upgrade && php /var/www/html/occ db:add-missing-indices && php /var/www/html/occ db:add-missing-columns && php /var/www/html/occ db:add-missing-primary-keys && php /var/www/html/occ db:convert-filecache-bigint && php /var/www/html/occ maintenance:repair --include-expensive"]
         volumeMounts:
-        - name: &volMount nextcloud-main
-          mountPath: /var/www
-          subPath: html
+          - name: &volMount nextcloud-main
+            mountPath: /var/www/html
+            subPath: config
       restartPolicy: OnFailure
       securityContext:
         runAsUser: &uid 82
@@ -38,9 +38,9 @@ spec:
         command: ["/bin/sh", "-c"]
         args: ["until php /var/www/html/occ status --output json | grep -q '\"installed\":true'; do sleep 10; done && php /var/www/html/occ app:disable firstrunwizard && php /var/www/html/occ app:disable support && php /var/www/html/occ app:enable admin_audit && php /var/www/html/occ app:enable files_pdfviewer && php /var/www/html/occ app:enable groupfolders && php /var/www/html/occ app:install notes && php /var/www/html/occ app:install richdocuments && php /var/www/html/occ app:install deck && php /var/www/html/occ app:install tables && php /var/www/html/occ app:install forms && php /var/www/html/occ app:install quota_warning"]
         volumeMounts:
-        - name: &volMount nextcloud-main
-          mountPath: /var/www
-          subPath: html
+          - name: &volMount nextcloud-main
+            mountPath: /var/www/html
+            subPath: config
       restartPolicy: OnFailure
       securityContext:
         runAsUser: &uid 82
@@ -78,9 +78,9 @@ spec:
             php /var/www/html/occ richdocuments:activate-config
             echo "Nextcloud Office configuration completed.";
         volumeMounts:
-        - name: &volMount nextcloud-main
-          mountPath: /var/www
-          subPath: html
+          - name: &volMount nextcloud-main
+            mountPath: /var/www/html
+            subPath: config
       restartPolicy: OnFailure
       securityContext:
         runAsUser: &uid 82
