--- a/kubernetes/apps/self-hosted/collabora/app/helmrelease.yaml
+++ b/kubernetes/apps/self-hosted/collabora/app/helmrelease.yaml
@@ -56,9 +56,7 @@ spec:
               liveness: *probes
               readiness: *probes
             securityContext:
-              capabilities:
-                add: ["SYS_ADMIN", "MKNOD"]
-                drop: ["NET_RAW"]
+              capabilities: { add: ["MKNOD"] }
     defaultPodOptions:
       securityContext:
         runAsNonRoot: true
