--- a/kubernetes/apps/self-hosted/nextcloud/app/job.yaml
+++ b/kubernetes/apps/self-hosted/nextcloud/app/job.yaml
@@ -13,8 +13,7 @@ spec:
         args: ["until php /var/www/html/occ status --output json | grep -q '\"installed\":true'; do sleep 10; done && php /var/www/html/occ upgrade && php /var/www/html/occ db:add-missing-indices && php /var/www/html/occ db:add-missing-columns && php /var/www/html/occ db:add-missing-primary-keys && php /var/www/html/occ db:convert-filecache-bigint && php /var/www/html/occ maintenance:repair --include-expensive"]
         volumeMounts:
           - name: &volMount nextcloud-main
-            mountPath: /var/www
-            subPath: html
+            mountPath: /var/www/html
       restartPolicy: OnFailure
       securityContext:
         runAsUser: &uid 82
