--- a/kubernetes/apps/self-hosted/nextcloud/ks.yaml
+++ b/kubernetes/apps/self-hosted/nextcloud/ks.yaml
@@ -26,7 +26,7 @@ spec:
     substitute:
       APP: *app
       PVC_ACCESSMODES: ReadWriteOnce
-      PVC_STORAGECLASS: ${CLUSTER_STORAGE_BLOCK}
+      PVC_STORAGECLASS: ${CLUSTER_STORAGE_NFS}
       PVC_CAPACITY: 5Gi
   prune: true
   sourceRef:
