--- a/kubernetes/apps/self-hosted/nextcloud/ks.yaml
+++ b/kubernetes/apps/self-hosted/nextcloud/ks.yaml
@@ -25,7 +25,7 @@ spec:
   postBuild:
     substitute:
       APP: *app
-      PVC_ACCESSMODES: ReadWriteMany
+      PVC_ACCESSMODES: ReadWriteOnce
       PVC_STORAGECLASS: ${CLUSTER_STORAGE_BLOCK}
       PVC_CAPACITY: 5Gi
   prune: true
