--- a/kubernetes/apps/self-hosted/nextcloud/app/helmrelease.yaml
+++ b/kubernetes/apps/self-hosted/nextcloud/app/helmrelease.yaml
@@ -171,6 +171,20 @@ spec:
           pm.max_spare_servers = 42
           pm.max_requests = 500
           pm.process_idle_timeout = 10s
+    extraSidecarContainers:
+      - name: nextcloud-job-config-postinstall
+        type: job
+        image: docker.io/library/nextcloud:30.0.5-fpm-alpine
+        command: ["/bin/sh", "-c"]
+        args: ["until php /var/www/html/occ status --output json | grep -q '\"installed\":true'; do sleep 10; done && echo 'Installed !!!'"]
+        volumeMounts:
+        - name: nextcloud-main
+          mountPath: /var/www/html
+        restartPolicy: OnFailure
+        securityContext:
+        runAsUser: &uid 82
+        runAsGroup: *uid
+        ttlSecondsAfterFinished: 3600
     persistence:
       enabled: true
       existingClaim: *app
