--- a/kubernetes/apps/self-hosted/nextcloud/app/job.yaml
+++ b/kubernetes/apps/self-hosted/nextcloud/app/job.yaml
@@ -12,80 +12,230 @@ spec:
         command: ["/bin/sh", "-c"]
         args: ["until php /var/www/html/occ status --output json | grep -q '\"installed\":true'; do sleep 10; done && php /var/www/html/occ upgrade && php /var/www/html/occ db:add-missing-indices && php /var/www/html/occ db:add-missing-columns && php /var/www/html/occ db:add-missing-primary-keys && php /var/www/html/occ db:convert-filecache-bigint && php /var/www/html/occ maintenance:repair --include-expensive"]
         volumeMounts:
-          - name: &volMount nextcloud-main
-            mountPath: /var/www/html
+        - name: config
+          mountPath: /var/www/html
+          subPath: config
+        - name: data
+          mountPath: /data
+          subPath: data
       restartPolicy: OnFailure
       securityContext:
-        runAsUser: &uid 82
+        runAsUser: &uid 5000
         runAsGroup: *uid
+        fsGroup: *uid
       ttlSecondsAfterFinished: 3600
       volumes:
-      - name: *volMount
+      - name: config
         persistentVolumeClaim:
-          claimName: nextcloud
-# ---
-# apiVersion: batch/v1
-# kind: Job
-# metadata:
-#   name: nextcloud-job-config-addapps
-# spec:
-#   template:
-#     spec:
-#       containers:
-#       - name: nextcloud-job-config-addapps
-#         image: docker.io/library/nextcloud:30.0.5-fpm-alpine
-#         command: ["/bin/sh", "-c"]
-#         args: ["until php /var/www/html/occ status --output json | grep -q '\"installed\":true'; do sleep 10; done && php /var/www/html/occ app:disable firstrunwizard && php /var/www/html/occ app:disable support && php /var/www/html/occ app:enable admin_audit && php /var/www/html/occ app:enable files_pdfviewer && php /var/www/html/occ app:enable groupfolders && php /var/www/html/occ app:install notes && php /var/www/html/occ app:install richdocuments && php /var/www/html/occ app:install deck && php /var/www/html/occ app:install tables && php /var/www/html/occ app:install forms && php /var/www/html/occ app:install quota_warning"]
-#         volumeMounts:
-#           - name: &volMount nextcloud-main
-#             mountPath: /var/www/html
-#             subPath: config
-#       restartPolicy: OnFailure
-#       securityContext:
-#         runAsUser: &uid 82
-#         runAsGroup: *uid
-#       ttlSecondsAfterFinished: 3600
-#       volumes:
-#       - name: *volMount
-#         persistentVolumeClaim:
-#           claimName: nextcloud
-# ---
-# apiVersion: batch/v1
-# kind: Job
-# metadata:
-#   name: nextcloud-job-config-richdocuments
-# spec:
-#   template:
-#     spec:
-#       containers:
-#       - name: nextcloud-job-config-richdocuments
-#         image: docker.io/library/nextcloud:30.0.5-fpm-alpine
-#         command: ["/bin/sh", "-c"]
-#         args:
-#           - |
-#             until php /var/www/html/occ status --output json | grep -q '"installed":true'; do
-#               echo "Waiting for Nextcloud installation...";
-#               sleep 10;
-#             done;
-#             echo "Nextcloud is installed. Waiting for Nextcloud Office..."
-#             until php /var/www/html/occ app:list | grep -q 'richdocuments'; do
-#               echo "Waiting for Nextcloud Office installation..."
-#               sleep 10;
-#             done;
-#             echo "Nextcloud Office is installed. Configuring...";
-#             php /var/www/html/occ config:app:set --value ${CLUSTER_POD_CIDR} richdocuments wopi_url
-#             php /var/www/html/occ richdocuments:activate-config
-#             echo "Nextcloud Office configuration completed.";
-#         volumeMounts:
-#           - name: &volMount nextcloud-main
-#             mountPath: /var/www/html
-#             subPath: config
-#       restartPolicy: OnFailure
-#       securityContext:
-#         runAsUser: &uid 82
-#         runAsGroup: *uid
-#       ttlSecondsAfterFinished: 7200
-#       volumes:
-#       - name: *volMount
-#         persistentVolumeClaim:
-#           claimName: nextcloud
+          claimName: nextcloud-config
+      - name: data
+        persistentVolumeClaim:
+          claimName: nextcloud-data
+---
+apiVersion: batch/v1
+kind: Job
+metadata:
+  name: nextcloud-job-config-addapps
+spec:
+  template:
+    spec:
+      containers:
+      - name: nextcloud-job-config-addapps
+        image: docker.io/library/nextcloud:30.0.5-fpm-alpine
+        command: ["/bin/sh", "-c"]
+        args: ["until php /var/www/html/occ status --output json | grep -q '\"installed\":true'; do sleep 10; done && php /var/www/html/occ app:disable firstrunwizard && php /var/www/html/occ app:disable support && php /var/www/html/occ app:enable admin_audit && php /var/www/html/occ app:enable files_pdfviewer && php /var/www/html/occ app:enable groupfolders && php /var/www/html/occ app:enable notes && php /var/www/html/occ app:install richdocuments && php /var/www/html/occ app:install whiteboard && php /var/www/html/occ app:install deck && php /var/www/html/occ app:install tables && php /var/www/html/occ app:install forms && php /var/www/html/occ app:install quota_warning"]
+        volumeMounts:
+        - name: config
+          mountPath: /var/www/html
+          subPath: config
+        - name: data
+          mountPath: /data
+          subPath: data
+      restartPolicy: OnFailure
+      securityContext:
+        runAsUser: &uid 5000
+        runAsGroup: *uid
+        fsGroup: *uid
+      ttlSecondsAfterFinished: 3600
+      volumes:
+      - name: config
+        persistentVolumeClaim:
+          claimName: nextcloud-config
+      - name: data
+        persistentVolumeClaim:
+          claimName: nextcloud-data
+---
+apiVersion: batch/v1
+kind: Job
+metadata:
+  name: nextcloud-job-config-whiteboard
+spec:
+  template:
+    spec:
+      containers:
+      - name: nextcloud-job-config-whiteboard
+        image: docker.io/library/nextcloud:30.0.5-fpm-alpine
+        command: ["/bin/sh", "-c"]
+        args:
+          - |
+            until php /var/www/html/occ status --output json | grep -q '"installed":true'; do
+              echo "Waiting for Nextcloud installation...";
+              sleep 10;
+            done;
+            echo "Nextcloud is installed. Waiting for Whiteboard..."
+            until php /var/www/html/occ app:list | grep -q 'whiteboard'; do
+              echo "Waiting for Whiteboard installation..."
+              sleep 10;
+            done;
+            echo "Whiteboard is installed. Configuring...";
+            php /var/www/html/occ config:app:set whiteboard collabBackendUrl --value="https://nextcloud.${SECRET_DOMAIN}/whiteboard/";
+            php /var/www/html/occ config:app:set whiteboard jwt_secret_key --value="${WHITEBOARD_JWT_SECRET_KEY}";
+            echo "Whiteboard configuration completed.";
+        volumeMounts:
+        - name: config
+          mountPath: /var/www/html
+          subPath: config
+        - name: data
+          mountPath: /data
+          subPath: data
+      restartPolicy: OnFailure
+      securityContext:
+        runAsUser: &uid 5000
+        runAsGroup: *uid
+        fsGroup: *uid
+      ttlSecondsAfterFinished: 3600
+      volumes:
+      - name: config
+        persistentVolumeClaim:
+          claimName: nextcloud-config
+      - name: data
+        persistentVolumeClaim:
+          claimName: nextcloud-data
+---
+apiVersion: batch/v1
+kind: Job
+metadata:
+  name: nextcloud-job-config-richdocuments
+spec:
+  template:
+    spec:
+      containers:
+      - name: nextcloud-job-config-richdocuments
+        image: docker.io/library/nextcloud:30.0.5-fpm-alpine
+        command: ["/bin/sh", "-c"]
+        args:
+          - |
+            until php /var/www/html/occ status --output json | grep -q '"installed":true'; do
+              echo "Waiting for Nextcloud installation...";
+              sleep 10;
+            done;
+            echo "Nextcloud is installed. Waiting for Nextcloud Office..."
+            until php /var/www/html/occ app:list | grep -q 'richdocuments'; do
+              echo "Waiting for Nextcloud Office installation..."
+              sleep 10;
+            done;
+            echo "Nextcloud Office is installed. Configuring...";
+            php /var/www/html/occ config:app:set --value nextcloud.${SECRET_DOMAIN} richdocuments wopi_url
+            php /var/www/html/occ richdocuments:activate-config
+            echo "Nextcloud Office configuration completed.";
+        volumeMounts:
+        - name: config
+          mountPath: /var/www/html
+          subPath: config
+        - name: data
+          mountPath: /data
+          subPath: data
+      restartPolicy: OnFailure
+      securityContext:
+        runAsUser: &uid 5000
+        runAsGroup: *uid
+        fsGroup: *uid
+      ttlSecondsAfterFinished: 3600
+      volumes:
+      - name: config
+        persistentVolumeClaim:
+          claimName: nextcloud-config
+      - name: data
+        persistentVolumeClaim:
+          claimName: nextcloud-data
+---
+apiVersion: batch/v1
+kind: CronJob
+metadata:
+  name: nextcloud-cronjob-cron
+spec:
+  schedule: "*/5 * * * *" # Every 5 minutes.
+  successfulJobsHistoryLimit: 1
+  failedJobsHistoryLimit: 1
+  jobTemplate:
+    spec:
+      ttlSecondsAfterFinished: 60
+      template:
+        spec:
+          containers:
+            - name: nextcloud-cronjob-cron
+              image: docker.io/library/nextcloud:30.0.5-fpm-alpine
+              command:
+                - sh
+                - -c
+                - |
+                  if [ -f /var/www/html/cron.php ]; then
+                    php -f /var/www/html/cron.php;
+                  else
+                    echo "cron.php not found, skipping execution";
+                  fi
+              volumeMounts:
+                - name: config
+                  mountPath: /var/www/html
+                  subPath: config
+                - name: data
+                  mountPath: /data
+                  subPath: data
+          restartPolicy: OnFailure
+          securityContext:
+            runAsUser: &uid 5000
+            runAsGroup: *uid
+            fsGroup: *uid
+          volumes:
+            - name: config
+              persistentVolumeClaim:
+                claimName: nextcloud-config
+            - name: data
+              persistentVolumeClaim:
+                claimName: nextcloud-data
+---
+apiVersion: batch/v1
+kind: CronJob
+metadata:
+  name: nextcloud-cronjob-missingindices
+spec:
+  schedule: "0 3 * * *" # Every day at 03:00.
+  jobTemplate:
+    spec:
+      ttlSecondsAfterFinished: 3600
+      template:
+        spec:
+          containers:
+          - name: nextcloud-cronjob-missingindices
+            image: docker.io/library/nextcloud:30.0.5-fpm-alpine
+            command: ["/bin/sh", "-c"]
+            args: ["php /var/www/html/occ maintenance:mode --on && php /var/www/html/occ db:add-missing-indices && php /var/www/html/occ maintenance:mode --off"]
+            volumeMounts:
+            - name: config
+              mountPath: /var/www/html
+              subPath: config
+            - name: data
+              mountPath: /data
+              subPath: data
+          restartPolicy: OnFailure
+          securityContext:
+            runAsUser: &uid 5000
+            runAsGroup: *uid
+            fsGroup: *uid
+          volumes:
+          - name: config
+            persistentVolumeClaim:
+              claimName: nextcloud-config
+          - name: data
+            persistentVolumeClaim:
+              claimName: nextcloud-data
